--- a/web/package.json
+++ b/web/package.json
@@ -1,15 +1,40 @@
 {
-  "name": "web",
-  "version": "0.1.0",
+  "name": "motion-detection",
   "private": true,
+  "type": "module",
+  "version": "0.0.0",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --fix"
   },
   "dependencies": {
-    "vue": "^3.2.13"
+    "@mdi/font": "7.4.47",
+    "axios": "^1.7.8",
+    "roboto-fontface": "*",
+    "vue": "^3.4.31",
+    "vuetify": "^3.6.14"
   },
   "devDependencies": {
-    "@vue/cli-service": "~5.0.0"
+    "@eslint/js": "^9.14.0",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "eslint": "^9.14.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.4.0",
+    "eslint-plugin-vue": "^9.30.0",
+    "pinia": "^2.1.7",
+    "sass": "1.77.8",
+    "sass-embedded": "^1.77.8",
+    "unplugin-auto-import": "^0.17.6",
+    "unplugin-fonts": "^1.1.1",
+    "unplugin-vue-components": "^0.27.2",
+    "unplugin-vue-router": "^0.10.0",
+    "vite": "^5.4.0",
+    "vite-plugin-vue-layouts": "^0.11.0",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vue-router": "^4.4.0"
   }
 }
