--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -6,16 +6,19 @@ memory_limit=512M
 upload_max_filesize=100M
 post_max_size=100M
 
-max_execution_time=120
-max_input_time=60
+max_execution_time=300
+max_input_time=300
 
-date.timezone=UTC
+output_buffering = Off
+implicit_flush = On
+
+;date.timezone=UTC
 
 ; Enable OPcache for performance
-opcache.enable=1
-opcache.memory_consumption=128
-opcache.interned_strings_buffer=8
-opcache.max_accelerated_files=10000
-opcache.validate_timestamps=1
-opcache.revalidate_freq=2
-opcache.fast_shutdown=1
+;opcache.enable=1
+;opcache.memory_consumption=128
+;opcache.interned_strings_buffer=8
+;opcache.max_accelerated_files=10000
+;opcache.validate_timestamps=1
+;opcache.revalidate_freq=2
+;opcache.fast_shutdown=1
