python script that saves & streams the module from raspberry pi

--- a/api/.env
+++ b/api/.env
@@ -32,3 +32,5 @@ DATABASE_URL="mysql://symfony:symfony@127.0.0.1:3306/symfony?serverVersion=16&ch
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+PUBLIC_RECORDINGS_FOLDER="%kernel.project_dir%/public/recordings"
