--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -2,9 +2,9 @@ display_errors=On
 display_startup_errors=On
 error_reporting=E_ALL
 
-memory_limit=512M
-upload_max_filesize=100M
-post_max_size=100M
+memory_limit=128M
+upload_max_filesize=50M
+post_max_size=50M
 
 max_execution_time=300
 max_input_time=300
