--- a/api/.env
+++ b/api/.env
@@ -34,3 +34,11 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
 PUBLIC_RECORDINGS_FOLDER="%kernel.project_dir%/public/recordings"
+PRIVATE_UNPROCESSED_RECORDINGS_FOLDER="%kernel.project_dir%/private/UnprocessedRecordings"
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
