--- a/api/.gitignore
+++ b/api/.gitignore
@@ -5,6 +5,9 @@
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
+/public/recordings/
+/private/UnprocessedRecordings/
 /var/
 /vendor/
+motion_2025_01_12T17_59_02.h264
 ###< symfony/framework-bundle ###
