--- a/api/config/services.yaml
+++ b/api/config/services.yaml
@@ -12,7 +12,9 @@ services:
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
             string $public_recordings_folder: '%env(resolve:PUBLIC_RECORDINGS_FOLDER)%'
-
+            string $private_recordings_folder: '%env(resolve:PRIVATE_UNPROCESSED_RECORDINGS_FOLDER)%'
+            # Automatically inject the conversion logger into any service requiring it
+#            LoggerInterface $conversion_logger: '@monolog.logger.conversion_logger'  # Bind conversion_logger
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -23,5 +25,8 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\MessageHandler\ProcessMotionDetectedFileHandler:
+        arguments:
+            $conversion_logger: '@monolog.logger.conversion_logger'
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
