--- a/web/package.json
+++ b/web/package.json
@@ -7,9 +7,17 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "ionic:build": "npm run build",
+    "ionic:serve": "vite dev --host 0.0.0.0 --port 8100"
   },
   "dependencies": {
+    "@capacitor/android": "6.2.0",
+    "@capacitor/app": "6.0.2",
+    "@capacitor/core": "6.2.0",
+    "@capacitor/haptics": "6.0.2",
+    "@capacitor/keyboard": "6.0.3",
+    "@capacitor/status-bar": "6.0.2",
     "@mdi/font": "7.4.47",
     "axios": "^1.7.8",
     "roboto-fontface": "*",
@@ -17,6 +25,7 @@
     "vuetify": "^3.6.14"
   },
   "devDependencies": {
+    "@capacitor/cli": "6.2.0",
     "@eslint/js": "^9.14.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "eslint": "^9.14.0",
