working slider & calendar stuff & file formatting

--- a/api/.env
+++ b/api/.env
@@ -42,3 +42,5 @@ PRIVATE_UNPROCESSED_RECORDINGS_FOLDER="%kernel.project_dir%/private/UnprocessedR
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
+
+CORS_ALLOW_ORIGIN=*
