--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,26 +46,13 @@ services:
     image: nginx:latest
     container_name: symfony_nginx
     ports:
-      - "80:80"
-      - "443:443"
+      - "80:80"  # Only expose HTTP port, remove HTTPS
     volumes:
       - ./api:/var/www/symfony
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./docker/nginx/conf.d:/etc/nginx/conf.d  # Include conf.d directory
-      - ./docker/nginx/ssl:/etc/nginx/ssl       # Include SSL certificates
     depends_on:
       - app
-    networks:
-      - symfony_network
-
-
-  certbot:
-    image: certbot/certbot
-    container_name: certbot
-    volumes:
-      - ./docker/nginx/ssl:/etc/letsencrypt
-      - ./docker/nginx/ssl-data:/data/letsencrypt
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do sleep 1 & wait $${!}; done;'"
     networks:
       - symfony_network
 
