--- a/web/package.json
+++ b/web/package.json
@@ -18,8 +18,17 @@
     "@capacitor/haptics": "6.0.2",
     "@capacitor/keyboard": "6.0.3",
     "@capacitor/status-bar": "6.0.2",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/list": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
+    "@fullcalendar/vue3": "^6.1.15",
     "@mdi/font": "7.4.47",
+    "@splidejs/splide": "^4.1.4",
     "axios": "^1.7.8",
+    "dayjs": "^1.11.13",
+    "lodash": "^4.17.21",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vuetify": "^3.6.14"
