file cleanup to max 100GB per file type

--- a/api/.env
+++ b/api/.env
@@ -44,3 +44,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 CORS_ALLOW_ORIGIN=*
+
+MAX_DISK_SIZE_USAGE_GB=100
