--- a/api/config/packages/messenger.yaml
+++ b/api/config/packages/messenger.yaml
@@ -11,4 +11,5 @@ framework:
 
         routing:
             # Route your messages to the transports
-            App\Message\ProcessMotionDetectedFile: sync
+            App\Message\ProcessFileMessage: sync
+            App\Message\FileCleanupMessage: sync
