Added JWT security and some navigation for the app
security is currently disabled cuz of acces_control.

--- a/api/.env
+++ b/api/.env
@@ -46,3 +46,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 CORS_ALLOW_ORIGIN=*
 
 MAX_DISK_SIZE_USAGE_GB=100
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=test123
+###< lexik/jwt-authentication-bundle ###
