--- a/api/.gitignore
+++ b/api/.gitignore
@@ -11,3 +11,7 @@
 /vendor/
 motion*
 ###< symfony/framework-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
