--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -20,7 +20,7 @@ security:
             stateless: true
             json_login:
                 check_path: /api/login
-                success_handler: lexik_jwt_authentication.handler.authentication_success
+                success_handler: App\Security\JwtCookieAuthenticationSuccessHandler
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
         api:
@@ -30,4 +30,5 @@ security:
 
     access_control:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api/logout, roles: PUBLIC_ACCESS }
 #        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
