--- a/api/.env
+++ b/api/.env
@@ -43,7 +43,7 @@ PRIVATE_UNPROCESSED_RECORDINGS_FOLDER="%kernel.project_dir%/private/UnprocessedR
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
-CORS_ALLOW_ORIGIN=*
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1|10\.0\.2\.2)(:[0-9]+)?$
 
 MAX_DISK_SIZE_USAGE_GB=100
 ###> lexik/jwt-authentication-bundle ###
