--- a/api/config/packages/nelmio_cors.yaml
+++ b/api/config/packages/nelmio_cors.yaml
@@ -1,8 +1,11 @@
 nelmio_cors:
     defaults:
         allow_credentials: true
-        allow_origin: ['*']  # Allow all origins
-        allow_headers: ['*']  # Allow all headers
-        allow_methods: ['*']  # Allow all HTTP methods (GET, POST, PUT, DELETE, etc.)
-        expose_headers: []  # No specific headers to expose
-        max_age: 3600  # Cache preflight re quest for 1 hour
+        origin_regex: true
+        allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
+        allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
+        allow_headers: ['Content-Type', 'Authorization']
+        expose_headers: ['Link', 'X-Filename']
+        max_age: 3600
+    paths:
+        '^/': null
