--- a/web/package.json
+++ b/web/package.json
@@ -1,58 +1,38 @@
 {
   "name": "motion-detection",
+  "version": "0.0.0",
   "private": true,
   "type": "module",
-  "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix",
     "ionic:build": "npm run build",
     "ionic:serve": "vite dev --host 0.0.0.0 --port 8100"
   },
   "dependencies": {
     "@capacitor/android": "6.2.0",
     "@capacitor/app": "6.0.2",
+    "@capacitor/cli": "6.2.0",
     "@capacitor/core": "6.2.0",
     "@capacitor/haptics": "6.0.2",
     "@capacitor/keyboard": "6.0.3",
     "@capacitor/status-bar": "6.0.2",
-    "@fullcalendar/core": "^6.1.15",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/list": "^6.1.15",
-    "@fullcalendar/timegrid": "^6.1.15",
     "@fullcalendar/vue3": "^6.1.15",
-    "@mdi/font": "7.4.47",
     "@splidejs/splide": "^4.1.4",
-    "axios": "^1.7.8",
-    "dayjs": "^1.11.13",
+    "axios": "^1.7.9",
     "lodash": "^4.17.21",
-    "roboto-fontface": "*",
-    "vue": "^3.4.31",
-    "vuetify": "^3.6.14"
+    "pinia": "^2.3.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@capacitor/cli": "6.2.0",
-    "@eslint/js": "^9.14.0",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "eslint": "^9.14.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.4.0",
-    "eslint-plugin-vue": "^9.30.0",
-    "pinia": "^2.1.7",
-    "sass": "1.77.8",
-    "sass-embedded": "^1.77.8",
-    "unplugin-auto-import": "^0.17.6",
-    "unplugin-fonts": "^1.1.1",
-    "unplugin-vue-components": "^0.27.2",
-    "unplugin-vue-router": "^0.10.0",
-    "vite": "^5.4.0",
-    "vite-plugin-vue-layouts": "^0.11.0",
-    "vite-plugin-vuetify": "^2.0.3",
-    "vue-router": "^4.4.0"
+    "@vitejs/plugin-vue": "^5.2.1",
+    "vite": "^6.0.5",
+    "vite-plugin-vue-devtools": "^7.6.8"
   }
 }
