--- a/web/package.json
+++ b/web/package.json
@@ -18,13 +18,14 @@
     "@capacitor/haptics": "6.0.2",
     "@capacitor/keyboard": "6.0.3",
     "@capacitor/status-bar": "6.0.2",
+    "@fontsource/inter": "^5.1.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
-    "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/vue3": "^6.1.15",
     "@splidejs/splide": "^4.1.4",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
