--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -12,7 +12,7 @@ max_input_time=300
 output_buffering = Off
 implicit_flush = On
 
-;date.timezone=UTC
+date.timezone = "Europe/Amsterdam"
 
 ; Enable OPcache for performance
 ;opcache.enable=1
