--- a/api/config/packages/messenger.yaml
+++ b/api/config/packages/messenger.yaml
@@ -11,5 +11,5 @@ framework:
 
         routing:
             # Route your messages to the transports
-            App\Message\ProcessFileMessage: sync
-            App\Message\FileCleanupMessage: sync
+            App\Message\ProcessFileMessage: async
+            App\Message\FileCleanupMessage: async
