--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@capacitor/core": "6.2.0",
     "@capacitor/haptics": "6.0.2",
     "@capacitor/keyboard": "6.0.3",
+    "@capacitor/preferences": "^6.0.3",
     "@capacitor/status-bar": "6.0.2",
     "@fontsource/inter": "^5.1.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
