--- a/api/composer.json
+++ b/api/composer.json
@@ -6,8 +6,8 @@
     "require": {
         "php": ">=8.2",
         "ext-ctype": "*",
-        "ext-iconv": "*",
         "ext-curl": "*",
+        "ext-iconv": "*",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.3",
@@ -21,6 +21,7 @@
         "symfony/dotenv": "7.2.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.2.*",
+        "symfony/http-client": "7.2.*",
         "symfony/messenger": "7.2.*",
         "symfony/mime": "7.2.*",
         "symfony/monolog-bundle": "^3.10",
