--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,7 @@
     "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "pinia": "^2.3.0",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
