--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -13,9 +13,8 @@ RUN apt-get update && apt-get install -y \
     unzip \
     curl \
     ffmpeg \
-    git \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
-    && docker-php-ext-install gd pdo pdo_mysql pdo_pgsql zip ctype iconv curl mbstring tokenizer xml \
+    && docker-php-ext-install gd pdo pdo_mysql pdo_pgsql zip \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install Composer globally
