--- a/api/.env
+++ b/api/.env
@@ -34,7 +34,7 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
 PUBLIC_RECORDINGS_FOLDER="%kernel.project_dir%/public/recordings"
-PUBLIC_IMAGES_FOLDER="%kernel.project_dir%/public/images"
+PUBLIC_FOLDER="%kernel.project_dir%/public"
 PRIVATE_UNPROCESSED_RECORDINGS_FOLDER="%kernel.project_dir%/private/UnprocessedRecordings"
 
 ###> symfony/messenger ###
