--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -37,6 +37,7 @@ security:
 #                authenticator: App\Security\JwtCookieOrHeaderAuthenticator
 
     access_control:
+        - { path: ^/api/doc, roles: PUBLIC_ACCESS }
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/api/logout, roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
