--- a/web/.env
+++ b/web/.env
@@ -1,3 +1,4 @@
 #VITE_API_BASE_URL=http://10.0.2.2
 #VITE_API_BASE_URL=http://localhost
 VITE_API_BASE_URL=https://api.edwintenbrinke.nl
+VITE_TEST_BUTTON=true
