--- a/api/config/routes.yaml
+++ b/api/config/routes.yaml
@@ -6,3 +6,8 @@ controllers:
 
 api_login:
     path: /api/login
+
+gesdinet_jwt_refresh_token:
+    path: /api/refresh
+    controller: gesdinet.jwtrefreshtoken
+    methods: [POST]
