--- a/web/package.json
+++ b/web/package.json
@@ -11,9 +11,9 @@
     "ionic:serve": "vite dev --host 0.0.0.0 --port 8100"
   },
   "dependencies": {
+    "@aparajita/capacitor-biometric-auth": "^8.0.2",
     "@capacitor/android": "6.2.0",
     "@capacitor/app": "6.0.2",
-    "@capacitor/cli": "6.2.0",
     "@capacitor/core": "6.2.0",
     "@capacitor/haptics": "6.0.2",
     "@capacitor/keyboard": "6.0.3",
@@ -36,6 +36,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "6.2.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "vite": "^6.0.5",
     "vite-plugin-vue-devtools": "^7.6.8"
