--- a/api/config/routes.yaml
+++ b/api/config/routes.yaml
@@ -8,6 +8,6 @@ api_login:
     path: /api/login
 
 gesdinet_jwt_refresh_token:
-    path: /api/refresh
+    path: /api/token/refresh
     controller: gesdinet.jwtrefreshtoken
     methods: [POST]
